[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waveshare-epd-image"
version = "0.5.0"
description = "A simple, no-boilerplate Python library for displaying images on Waveshare e-paper (EPD) displays."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
  "Pillow",
  "numpy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]